[package]
name = "app_util"
version = "0.1.0"
authors = ["hzhou"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
serde_json = "1.0"
toml = "0.5"
shellexpand = "1.0"
regex = "1"
lazy_static = "1.4.0"
clap = "2.33.0"
tokio = "1.8.4"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
postgres = "0.15"